--- a/partials/intro.html
+++ b/partials/intro.html
@@ -1,7 +1,7 @@
 
 <!-- Main hero unit for a primary marketing message or call to action -->
 <div class="hero-unit">
-    <h1>DeadHead's Project Site<small> AngularJS-Bootstrap Seed</small></h1>
+    <h1>AcceptDead's Project Site<small> AngularJS-Bootstrap Seed</small></h1>
     <h2>Version <span app-version></span></h2>
     <p>This web application template derives from the <a href="https://github.com/angular/angular-seed">angular-seed</a> project and
     integrates
