--- a/partials/intro.html
+++ b/partials/intro.html
@@ -1,8 +1,8 @@
 
 <!-- Main hero unit for a primary marketing message or call to action -->
 <div class="hero-unit">
-    <h2>AcceptDead's Project Site<small> AngularJS-Bootstrap Seed</small></h2>
-    <h3>Version <span app-version></span></h3>
+    <h2>AcceptDead's Project Site<small>  [AngularJS-Bootstrap Seed]</small></h2>
+    <!-- <h3>Version <span app-version></span></h3> -->
     <p>This web application template derives from the <a href="https://github.com/angular/angular-seed">angular-seed</a> project and
     integrates
     <ul>
