--- a/partials/intro.html
+++ b/partials/intro.html
@@ -3,8 +3,7 @@
 <div class="hero-unit">
     <h2>AcceptDead's Project Site<small>  [AngularJS-Bootstrap Seed]</small></h2>
     <!-- <h3>Version <span app-version></span></h3> -->
-    <p>This web application template derives from the <a href="https://github.com/angular/angular-seed">angular-seed</a> project and
-    integrates
+    <p>안녕하십니까 이사이트는 Seongtae Kim 개인 프로젝트 사이트입니다
     <ul>
     <li><a href="http://angularjs.org">AngularJS</a>, </li>
     <li><a href="http://twitter.github.com/bootstrap/getting-started.html#examples">twitter-bootstrap</a>,</li>
