--- a/partials/intro.html
+++ b/partials/intro.html
@@ -2,10 +2,10 @@
 <!-- Main hero unit for a primary marketing message or call to action -->
 <div class="hero-unit">
     <h2>AcceptDead's Project Site<small>  [AngularJS-Bootstrap Seed]</small></h2>
-    <!-- <h3>Version <span app-version></span></h3> -->
-    <p>안녕하십니까 이사이트는 Seongtae Kim 개인 프로젝트 사이트입니다
+<!-- <h3>Version <span app-version></span></h3> -->
+    <p> Plan
     <ul>
-    <li><a href="http://angularjs.org">AngularJS</a>, </li>
+    <li><a href="#/Project_Server_Systems">AngularJS</a>, </li>
     <li><a href="http://twitter.github.com/bootstrap/getting-started.html#examples">twitter-bootstrap</a>,</li>
     <li><a href="http://jquery.com/">jQuery</a> and</li>
     <li>a simple PHP contact form.</li>
