--- a/partials/intro.html
+++ b/partials/intro.html
@@ -5,7 +5,7 @@
 <!-- <h3>Version <span app-version></span></h3> -->
     <p> Plan
     <ul>
-    <li><a href="#/Project_Server_Systems">AngularJS</a>, </li>
+    <li><a href="http://angularjs.org">AngularJS</a>, </li>
     <li><a href="http://twitter.github.com/bootstrap/getting-started.html#examples">twitter-bootstrap</a>,</li>
     <li><a href="http://jquery.com/">jQuery</a> and</li>
     <li>a simple PHP contact form.</li>
